// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model QuantityType {
  id    Int    @id @default(autoincrement())
  name  String @unique
  units Unit[]
}

model Unit {
  id      String         @id
  name    String
  symbol  String
  aliases UnitAlias[]
  types   QuantityType[]

  // Conversion parameters
  parameters   ConversionParameters? @relation(fields: [parametersId], references: [id])
  parametersId Int?

  // Base Unit
  baseUnit   Unit?   @relation("baseUnit", fields: [baseUnitId], references: [id])
  baseUnitId String?
  units      Unit[]  @relation("baseUnit")
}

model UnitAlias {
  id     Int    @id @default(autoincrement())
  name   String @unique
  unit   Unit   @relation(fields: [unitId], references: [id])
  unitId String
}

model ConversionParameters {
  id   Int    @id @default(autoincrement())
  a    Float
  b    Float
  c    Float
  d    Float
  Unit Unit[]
}
