@startuml uml-class-domain

package "Domain" {
  interface IUnit {
    + id: string
    + name: string
    + aliases: string[]
    + types: QuantityType[]
    + symbol: string
    + baseUnit: string
    + convertToBase(value: number): number
    + convertFromBase(value: number): number
  }
  class UnitFactory {
    + {static} loadUnit(name: string): IUnit
  }
  class ConversionParameters {
      # a: number
      # b: number
      # c: number
      # d: number
  }

  class BaseUnit {
  }

  class CustomaryUnit {
      # conversionParameters: ConversionParameters
  }
  class QuantityType {
      # name: string
  }
}

package "Database" {
  class UnitRepository {}
}

BaseUnit -UP-|> IUnit
CustomaryUnit -UP-|> IUnit
CustomaryUnit "*" --> "1" BaseUnit
CustomaryUnit "*" --* "1" ConversionParameters
IUnit "*" -RIGHT-> "*" QuantityType
UnitFactory --> IUnit
UnitFactory --> UnitRepository

@enduml